# devops-adventure-Stretch

./: LICENSE  Makefile  README.md
.github/workflows/: pipeline.yml
srcs/: .env  docker-compose.yml
srcs/backend/: pyproject.toml
srcs/backend/setup/setup/: settings.py
srcs/database/: Dockerfile  backup.sql
srcs/market/: Dockerfile  pyproject.toml
srcs/market/dashboard/: views.py
srcs/market/dashboard/templates/dashboard/: dashboard.html
srcs/market/orders/: models.py  views.py
srcs/market/orders/migrations/: 0001_initial.py
srcs/market/products/: models.py  urls.py  views.py
srcs/market/products/migrations/: 0001_initial.py
srcs/market/setup/: settings.py  urls.py
srcs/market/users/: models.py  urls.py  views.py
srcs/market/users/migrations/: 0001_initial.py
